--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# for this project
+randomgreyrock*
+randompinetree*
+randomgrassland*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
