snow clump trees
It's a winter wooonderland

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ randomgreyrock*
 randompinetree*
 randomgrassland*
 randomflower*
-
+randomsnowpinetree*
+randomsnowland*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
