remove save files from repo

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ randomgrassland*
 randomflower*
 randomsnowpinetree*
 randomsnowland*
+save0*
+savebackup*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
