clean up, message for wake up bear

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,15 @@ randomarcadecabinet*
 save0*
 savebackup*
 
+# virtual env
+env/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
-Emacs
+# Emacs
 *~
 \#*\#
 *.emacs.d
