point util and update gridgame algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 # for this project
-randomgreyrock*
-randompinetree*
-randomgrassland*
-randomflower*
-randomsnowpinetree*
-randomsnowland*
-randomarcadecabinet*
+random*
 save0*
 savebackup*
 
