try to disable sdl audio

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - python3 setup.py
 
 script:
+  - export AUDIODEV=null
   - python3 src/test_suite.py
   - mypy src/bearly\ dancing.py
   
